--- a/lang/ja.json
+++ b/lang/ja.json
@@ -117,10 +117,10 @@
     "If you did not receive the email": "もし確認メールを受信していない場合には",
     "click here to request another": "ここをクリックして再リクエストしてください",
     "If you did not create an account, no further action is required.": "このサービスへのアカウントを登録していない場合には、本メールへの対応は不要です",
-    "Hello!": "こんにちは",
+    "Hello!": "パスワード再設定について",
     "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "もし\":actionText\"がクリックできない場合には下記URLをコピー＆ペースしてアクセスしてください",
     "into your web browser:" : "",
-    "Reset Password Notification": "パスワードのリセット方法について",
+    "Reset Password Notification": "パスワード再設定通知",
     "You are receiving this email because we received a password reset request for your account.": "このメールはパスワードのリセットリクエストにより送信されています。",
     "This password reset link will expire in :count minutes.": "このパスワードリセット用リンクは :count分で有効期限が切れます。",
     "If you did not request a password reset, no further action is required.": "パスワードのリセットリクエストをしていない場合には、本メールへの対応は不要です。",
